Release notes for xmlBlaster @version@ (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes in current subversion repository (svn)
==============================================

 o #13038 jutils-logging Fixed synchronization gap when making log-backup files

 o #13035 FilePoller final release

 o #13033 Fixed xmlBlasterPlugins.xml SAX parse to
   - allow sub-tags as attribute value
   - support inner CDATA sections in attribute markup


Changes for 1.RC3 [2004-12-08] #12997
=====================================

 o #13013 Added filepoller plugin to retrieve and publish files from a directory

 o #13013 Added getter in Global for properties when mixed with plugin properties

 o #13013 Added I_PluginConfig interface 

 o #12995 Changed subscription ID to be unique over time

 o #12988 Bugfix in script: CDATA in content are not passed through anymore and duplication of 
   content does not happen anymore 

 o C client library:
   - #12985 Added XMLBLASTER_NO_RCSID switch for broken svnversion/rcsid workaround

 o C++ client library:
   - #12985 Added XMLBLASTER_NO_RCSID switch for broken svnversion/rcsid workaround
   - #12985 Changed compilation workaround from "__sun" to "__SUNPRO_CC" as g++ on Sun does not need it


Changes for 1.RC2 [2004-12-01] #12978
=====================================

 o #12963 better handling of possible interrupted exception in ConnectionPool

 o #12961 Added ConnectQos to xml server dump (without security parts)

 o #12960 Fixed delay of callback polling after a client reconnect

 o #12956 build.xml: JFlex and JavaCup are invoked only if files not up to date.

 o #12954 BUGFIX: Topic erase notification events could dead lock
   when at the same time a subscriber callback delivery took place

 o #12950 it is now possible to send CDATA in content when using xmlBlaster script

 o #12948 BUGFIX: The combination of subscribe() and get() on the same topic with cluster=true failed